--- a/assets/admin.css
+++ b/assets/admin.css
@@ -37,6 +37,18 @@
 	width: 100%;
 }
 
+.field.field_type-ppb-business-pack-pro section > div {
+	position: relative;
+}
+
+.field.field_type-ppb-business-pack-pro section .fa {
+	position: absolute;
+	right: 0;
+	margin: 1em 1.6em;
+	width: auto;
+	cursor: pointer;
+}
+
 .ppb-biz-ta-section-fields div {
 	padding:14px 7px 0;
 	max-width: 50%;
