--- a/assets/front-end.css
+++ b/assets/front-end.css
@@ -15,8 +15,7 @@
 /* Testimonials */
 .ppb-biz-testimonial {
 	position: relative;
-	background: rgba(250,250,250,0.5);
-	border: 3px solid #fff;
+	background: rgba(160,160,160,0.25);
 	padding: 35px 25px 25px;
 	margin-top: 35px;
 	border-radius: 5px;
@@ -30,16 +29,17 @@
 
 .ppb-biz-testimonial > .fa {
 	position: absolute;
-	top: -27px; /* 2px extra for border*/
+	top: -25px; /* 2px extra for border*/
 	left: 50%;
 	margin-left: -25px;
 	width:50px;
 	height: 50px;
 	line-height: 50px;
 	text-align: center;
-	background: #fff;
+	border: 2px solid;
 	font-size: 25px;
-	color: #333;
+	color: rgba(25,25,25,0.88);
+	background: rgba(160,160,160,0.25);
 	border-radius: 50%;
 }
 
@@ -66,23 +66,26 @@
 	display: inline-block;
 	padding: 1em 1.6em;
 	margin: 0 2px 0 0;
-	background: rgba(255, 255, 255, 0.07);
-	border: 1px solid rgba(0,0,0,0.1);
+	background: rgba(255, 255, 255, 0.5);
+	border: 1px solid rgba(0,0,0,0.25);
 	border-bottom: 0;
+	border-radius: 3px 3px 0 0;
 }
 
 .ppb-biz-link.active {
-	border-color: rgba(0,0,0, 0.5);
-	background: rgba(255,255,255,0.25);
+	border-color: rgba(0,0,0, 0.7);
+	background: #fff;
+	border-bottom:1px solid #fff;
+	margin-bottom:-1px;
 }
 
 .ppb-biz-tabs .ppb-biz-content {
 	display: none;
-	border: 1px solid rgba(0,0,0,0.5);
+	border: 1px solid rgba(0,0,0,0.7);
 }
 
 .ppb-biz-content {
-	background: rgba(255,255,255,0.25);
+	background: #fff;
 	padding: 1em;
 }
 
