Renaming to Business Pack

--- a/assets/front-end.css
+++ b/assets/front-end.css
@@ -1,14 +1,14 @@
 /**
  * Plugin front end scripts
  *
- * @package Pootle_Pagebuilder_Business_Pack
+ * @package Pootle_Business_Pack
  * @version 1.0.0
  */
 
 /**
  * Plugin front end scripts
  *
- * @package Pootle_Pagebuilder_Business_Pack
+ * @package Pootle_Business_Pack
  * @version 1.0.0
  */
 
